# VEngine

doc/develop/: schedule.txt  使用CMake构建工程文件.doc
src/CMake/: FindVisionDependenciesInclude.cmake  FindVisionDependenciesLibrary.cmake  VisionCMakeModule.cmake
src/Client/: CMakeLists.txt
src/Client/Engine/: CMakeLists.txt
src/Client/Engine/include/Camera/: VCamera.h  VFlyingCamera.h
src/Client/Engine/include/Core/: IActionEventListener.h  IRenderEventListener.h  IWindowEventListener.h  VEngine.h  VEngineConfig.h  VEngineEvent.h  VEngineType.h  VFlags.h  VFramework.h  VGraphicsSystem.h  VInputSystem.h  VResource.h  VVariant.h
src/Client/Engine/include/Effect/: VAnimationEffectInfo.h  VAnimationRibbon.h  VAnimationSceneLight.h  VAnimationSound.h  VBeamElement.h  VBillboardSetElement.h  VEffect.h  VEffectBase.h  VEffectElement.h  VEffectElementFactory.h  VEffectManager.h  VMainSceneLight.h  VParticleElement.h  VPointLightElement.h  VProjectorElement.h  VSkill.h
src/Client/Engine/include/Framework/: VDumpContext.h  VEventHandler.h  VEventMacro.h  VEventManager.h  VGameStage.h  VGameStageManager.h  VObject.h  VRuntimeClass.h
src/Client/Engine/include/Math/: VTransform.h
src/Client/Engine/include/Object/: VActor.h  VLogicModel.h  VLogicModelManager.h  VLogicModelSerializer.h  VModel.h  VModelSerializer.h
src/Client/Engine/include/OgreExt/: OgreAutoAnimationEntity.h  OgreBillboardChainEx.h  OgreSkeletonEx.h  OgreSkeletonManagerEx.h  OgreSkeletonSerializerEx.h
src/Client/Engine/include/Scene/: VActorObject.h  VEffectObject.h  VEnvironmentObject.h  VLightObject.h  VModelObject.h  VParticleSystemObject.h  VPlacementObject.h  VProperty.h  VPropertyHelper.h  VScene.h  VSceneInfo.h  VSceneObject.h  VSceneObjectFactory.h  VSceneObjectFactoryManager.h  VSceneSerializer.h  VSkyBoxObject.h  VSkyDomeObject.h  VSkyPlaneObject.h  VStaticEntityObject.h  VTerrainLiquidObject.h
src/Client/Engine/include/Terrain/: VTerrain.h  VTerrainInfo.h  VTerrainSerializer.h  VTerrainTile.h
src/Client/Engine/include/Utils/: VisionUtils.h
src/Client/Engine/include/XML/: VisionExpatParser.h  VisionXMLAttributes.h  VisionXMLHandler.h  VisionXMLNode.h  VisionXMLParser.h  VisionXMLWriter.h
src/Client/Engine/source/Camera/: VCamera.cpp  VFlyingCamera.cpp
src/Client/Engine/source/Core/: VEngine.cpp  VFramework.cpp  VGraphicsSystem.cpp  VInputSystem.cpp  VResource.cpp
src/Client/Engine/source/Effect/: VAnimationEffectInfo.cpp  VAnimationRibbon.cpp  VAnimationSceneLight.cpp  VAnimationSound.cpp  VBeamElement.cpp  VBillboardSetElement.cpp  VEffect.cpp  VEffectBase.cpp  VEffectElement.cpp  VEffectElementFactory.cpp  VEffectManager.cpp  VMainSceneLight.cpp  VParticleElement.cpp  VPointLightElement.cpp  VProjectorElement.cpp  VSkill.cpp
src/Client/Engine/source/Framework/: VDumpContext.cpp  VEventHandler.cpp  VEventManager.cpp  VGameStageManager.cpp  VObject.cpp  VRuntimeClass.cpp
src/Client/Engine/source/Math/: VTransform.cpp
src/Client/Engine/source/Object/: VActor.cpp  VLogicModel.cpp  VLogicModelManager.cpp  VLogicModelSerializer.cpp  VModel.cpp  VModelSerializer.cpp
src/Client/Engine/source/OgreExt/: OgreAutoAnimationEntity.cpp  OgreBillboardChainEx.cpp  OgreSkeletonEx.cpp  OgreSkeletonManagerEx.cpp  OgreSkeletonSerializerEx.cpp
src/Client/Engine/source/Scene/: VActorObject.cpp  VEffectObject.cpp  VEnvironmentObject.cpp  VLightObject.cpp  VModelObject.cpp  VParticleSystemObject.cpp  VPlacementObject.cpp  VProperty.cpp  VPropertyHelper.cpp  VScene.cpp  VSceneInfo.cpp  VSceneObject.cpp  VSceneObjectFactory.cpp  VSceneObjectFactoryManager.cpp  VSceneSerializer.cpp  VSkyBoxObject.cpp  VSkyDomeObject.cpp  VSkyPlaneObject.cpp  VStaticEntityObject.cpp  VTerrainLiquidObject.cpp
src/Client/Engine/source/Terrain/: VTerrain.cpp  VTerrainInfo.cpp  VTerrainSerializer.cpp  VTerrainTile.cpp
src/Client/Engine/source/Utils/: VisionUtils.cpp
src/Client/Engine/source/XML/: VisionExpatParser.cpp  VisionXMLAttributes.cpp  VisionXMLHandler.cpp  VisionXMLNode.cpp  VisionXMLParser.cpp  VisionXMLWriter.cpp
src/Client/Expat/: CMakeLists.txt
src/Client/Expat/include/: expat.h  winconfig.h
src/Client/Game/: CMakeLists.txt
src/Client/Game/include/: GameApp.h  GameEvent.h
src/Client/Game/include/Adapter/: GameObject.h
src/Client/Game/include/GameStage/: LoginGameStage.h  SceneGameStage.h
src/Client/Game/include/Mac/: VApplication.h
src/Client/Game/include/Role/: Player.h
src/Client/Game/include/Win32/: VApplication.h
src/Client/Game/source/: GameApp.cpp
src/Client/Game/source/GameStage/: LoginGameStage.cpp  SceneGameStage.cpp
src/Client/Game/source/Mac/: VApplication.cpp
src/Client/Game/source/Role/: Player.cpp
src/Client/Game/source/Win32/: WinMain.cpp
src/Client/Plugin_ParticleEx/: CMakeLists.txt
src/Client/Plugin_Scorpio/: CMakeLists.txt
src/Client/SceneEditor/: CMakeLists.txt
src/Client/SceneEditor/include/: renderwidget.h  scenegraphwidget.h  selectscenedialog.h
src/Client/SceneEditor/resource/: vsceneviewer.qrc
src/Client/SceneEditor/source/: renderwidget.cpp  selectscenedialog.cpp  vsceneviewer.cpp
src/Client/System/: CMakeLists.txt
src/Client/TinyXML/: CMakeLists.txt
src/CommentMacro/: CommentMacro.vsmacros
src/OgreTutorials/: CMakeLists.txt
src/OgreTutorials/BasicTutorial1/: CMakeLists.txt  TutorialApplication.cpp
src/OgreTutorials/BasicTutorial2/: BasicTutorial2.cpp  BasicTutorial2.h  CMakeLists.txt
src/OgreTutorials/BasicTutorial3/: BasicTutorial3.cpp  BasicTutorial3.h  CMakeLists.txt
src/OgreTutorials/BasicTutorial4/: BasicTutorial4.cpp  BasicTutorial4.h  CMakeLists.txt
src/OgreTutorials/IntermediateTutorial1/: CMakeLists.txt  IntermediateTutorial1.cpp  IntermediateTutorial1.h
src/OgreTutorials/IntermediateTutorial6/: CMakeLists.txt  IntermediateTutorial6.cpp  IntermediateTutorial6.h
src/VSceneViewer/VS2008/: VEngine.vcproj  VSceneViewer.sln  VSceneViewer.vcproj  expat.vcproj
src/VSceneViewer/VS2010/: Qt4VSPropertySheet.props  VEngine.vcxproj  VEngine.vcxproj.filters  VSceneViewer.sln  VSceneViewer.vcxproj  VSceneViewer.vcxproj.filters  (+2 more)
(+128 files in other folders)
