
PROJECT(VisionGame)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

IF(APPLE)
	SET(QT_QMAKE_EXECUTABLE /usr/local/Trolltech/Qt-4.7.3/bin/qmake)
ENDIF()


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)

INCLUDE(CPack)
INCLUDE(VisionCmakeModule)

#FIND_PACKAGE(VisionDependenciesMedia)
FIND_PACKAGE(VisionDependenciesLibrary)
FIND_PACKAGE(VisionDependenciesInclude)


LINK_DIRECTORIES(${Vision_DependenciesLibrary}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Vision_DependenciesInclude} )


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)


#INSTALL(DIRECTORY ${Vision_DependenciesInclude} DESTINATION ./Dependencies PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
#INSTALL(DIRECTORY ${Vision_DependenciesLibrary}/lib DESTINATION ./Dependencies PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
#INSTALL(DIRECTORY orz DESTINATION include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${Vision_DependenciesLibrary}/bin DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)


MESSAGE(${Vision_DependenciesLibrary})

IF(WIN32)
	ADD_DEFINITIONS(-DPLATFORM_WIN32)
ELSEIF(APPLE)
	ADD_DEFINITIONS(-DPLATFORM_MAC)
	ADD_DEFINITIONS(-D_DEBUG)
ELSEIF(UNIX)
	ADD_DEFINITIONS(-DPLATFORM_LINUX)
ENDIF()


MESSAGE(${CMAKE_GENERATOR})
#INSTALL(DIRECTORY ${Vision_DependenciesMedia} DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)

	ADD_SUBDIRECTORY(Plugin_ParticleEx)
	ADD_SUBDIRECTORY(Plugin_Scorpio)
	ADD_SUBDIRECTORY(System)
	ADD_SUBDIRECTORY(Expat)
	ADD_SUBDIRECTORY(TinyXML)
	ADD_SUBDIRECTORY(Engine)
#	ADD_SUBDIRECTORY(SceneEditor)
	ADD_SUBDIRECTORY(Game)

	ADD_DEPENDENCIES(VEngine VSystem expat tinyxml Plugin_ParticleEx Plugin_Scorpio)
#	ADD_DEPENDENCIES(VSceneEditor VEngine)
	ADD_DEPENDENCIES(Game VEngine)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/" CACHE PATH "Vision install prefix" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

MESSAGE(${PROJECT_SOURCE_DIR}/Config)
MESSAGE(${CMAKE_INSTALL_PREFIX}/../Config)

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Client/Config/Debug/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/Debug PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Client/Config/Release/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/Release PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Client/Data DESTINATION ${CMAKE_INSTALL_PREFIX}/bin PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)


