
PROJECT(OgreTutorials)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)

INCLUDE(CPack)
INCLUDE(VisionCmakeModule)

#FIND_PACKAGE(VisionDependenciesMedia)
FIND_PACKAGE(VisionDependenciesLibrary)
FIND_PACKAGE(VisionDependenciesInclude)


LINK_DIRECTORIES(${Vision_DependenciesLibrary}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Vision_DependenciesInclude} )


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)


#INSTALL(DIRECTORY ${Vision_DependenciesInclude} DESTINATION ./Dependencies PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
#INSTALL(DIRECTORY ${Vision_DependenciesLibrary}/lib DESTINATION ./Dependencies PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
#INSTALL(DIRECTORY orz DESTINATION include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${Vision_DependenciesLibrary}/bin DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)


MESSAGE(${Vision_DependenciesLibrary})

IF(WIN32)
	ADD_DEFINITIONS(-DPLATFORM_WIN32)
ELSEIF(APPLE)
	ADD_DEFINITIONS(-DPLATFORM_MAC)
	ADD_DEFINITIONS(-D_DEBUG)
ELSEIF(UNIX)
	ADD_DEFINITIONS(-DPLATFORM_LINUX)
ENDIF()


MESSAGE(${CMAKE_GENERATOR})
#INSTALL(DIRECTORY ${Vision_DependenciesMedia} DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)

	ADD_SUBDIRECTORY(BasicTutorial1)
#	ADD_SUBDIRECTORY(BasicTutorial2)
#	ADD_SUBDIRECTORY(BasicTutorial3)
#	ADD_SUBDIRECTORY(BasicTutorial4)
#	ADD_SUBDIRECTORY(BasicTutorial5)
#	ADD_SUBDIRECTORY(BasicTutorial6)
#	ADD_SUBDIRECTORY(BasicTutorial7)
#	ADD_SUBDIRECTORY(BasicTutorial8)
#	ADD_SUBDIRECTORY(IntermediateTutorial1)
#	ADD_SUBDIRECTORY(IntermediateTutorial2)
#	ADD_SUBDIRECTORY(IntermediateTutorial3)
#	ADD_SUBDIRECTORY(IntermediateTutorial4)
#	ADD_SUBDIRECTORY(IntermediateTutorial5)
#	ADD_SUBDIRECTORY(IntermediateTutorial6)
#	ADD_SUBDIRECTORY(IntermediateTutorial7)


SET(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/" CACHE PATH "Tutorial install prefix" FORCE)

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Tutorials/media DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Tutorials/config/Debug DESTINATION ${CMAKE_INSTALL_PREFIX}/bin PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/../../resources/Tutorials/config/Release DESTINATION ${CMAKE_INSTALL_PREFIX}/bin PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)


