
VISION_PRE_BUILD_EVENT(VSceneEditor)

INCLUDE_DIRECTORIES(
	"include"
	${CMAKE_CURRENT_BINARY_DIR}
	${QT_INCLUDE_DIR}
	)
	
	
VISION_SET_PROJECT("HDRS" include include/ .h)
VISION_SET_PROJECT("SRCS" source source/ .cpp)
VISION_SET_PROJECT("UIS" ui ui/ .ui)
VISION_SET_PROJECT("RCS" resource resource/ .qrc)
VISION_SET_PROJECT("RC" resource resource/ .rc)


FIND_PACKAGE(QT4 REQUIRED)
SET(QT_USE_QTMAIN TRUE)

INCLUDE("${QT_USE_FILE}")

ADD_DEFINITIONS(${QT_DEFINITIONS})

QT4_ADD_RESOURCES(${EXE_NAME}_RC_SRCS ${${EXE_NAME}_RCS})
QT4_WRAP_UI(${EXE_NAME}_UI_HDRS ${${EXE_NAME}_UIS})
QT4_WRAP_CPP(${EXE_NAME}_MOC_SRCS ${${EXE_NAME}_HDRS})

SOURCE_GROUP(GenerateFiles FILES ${${EXE_NAME}_UI_HDRS})
SOURCE_GROUP(GenerateFiles FILES ${${EXE_NAME}_MOC_SRCS})
SOURCE_GROUP(GenerateFiles FILES ${${EXE_NAME}_RC_SRCS})


ADD_EXECUTABLE(
	${EXE_NAME} WIN32 
	${${EXE_NAME}_SRCS} 
	${${EXE_NAME}_HDRS} 
	${${EXE_NAME}_MOC_SRCS} 
	${${EXE_NAME}_UI_HDRS} 
	${${EXE_NAME}_RC_SRCS} 
	${${EXE_NAME}_RC}
	)
	

TARGET_LINK_LIBRARIES(${EXE_NAME} ${QT_LIBRARIES})


VISION_POST_BUILD_EVENT()
